apps/base/download-pyload/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pyload
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pyload
      app.kubernetes.io/component: pyload
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pyload
        app.kubernetes.io/component: pyload
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # pyload
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: pyload
        image: "registry.lan/pyload-ng:0.5.0b3.dev101-3.14.8-slim-trixie"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: webui
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: webui
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: pyload-data
          mountPath: /config
          subPath: config
        - name: pyload-download
          mountPath: /downloads
          subPath: pyload
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: pyload-data
        persistentVolumeClaim:
          claimName: pyload-data
      - name: pyload-download
        persistentVolumeClaim:
          claimName: nfs-download
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
