apps/base/download-pyload/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyload
spec:
  ports:
  - port: 8000
    targetPort: webui
    name: webui
  selector:
      app.kubernetes.io/name: pyload
      app.kubernetes.io/component: pyload
