apps/base/download-pyload/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-pyload
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyload
      app.kubernetes.io/component: pyload

  ingress:
    # Allow http from the ingress controller
    - ports:
        - port: webui
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

    # Allow http from the homepage (to enable the widget)
    - ports:
        - port: webui
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tool-homepage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homepage
              app.kubernetes.io/component: homepage
